tests/errors/set_in_arithmetic.l26
{
    int x;
    set s;
    s = {1};
    x = s + 1;      // error: set used in arithmetic
}
